# CppExercises

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
IoManipulate/: circlepoints.csv  saveisv.cpp
IoManipulate/read_vector_from_txt/: CMakeLists.txt  bfnn.cc  cluster_taged_scan2scan_test_serial_processing.cpp  data_structures.h  encapsulized_cluster_taged_scan2scan_test_serial_processing.cpp  g2o_taged_scan2map_test_serial_processing_nonlinear_icp.cpp  icp2d.cc  icp2d.h  icp3d.cc  icp3d.h  icp_2d_gauss_newton.cc  icp_2d_gauss_newton.h  kdtree.cc  pcl_scan2map_test_serial_processing.cpp  pcl_scan2scan_test_serial_processing.cpp  read_vector_from_txt.hpp  scan2map_test_serial_processing.cpp  scan2scan_test_serial_processing.cpp  taged_scan2map_test_serial_processing_nonlinear_icp.cpp  test.cpp  test_serial_processing.cpp
IoManipulate/read_vector_from_txt/common/: utilities.h
IoManipulate/read_vector_from_txt/g20_implementations/: Gassel.g2o  pose_graph_g2o_SE2.cpp
IoManipulate/read_vector_from_txt/logs/: cluster_taged_scan2scan_test_serial_processing.INFO  cluster_taged_scan2scan_test_serial_processing.WARNING  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-121615.16136  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-123940.16924  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-164112.25239  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-164812.25528  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-165339.25772  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-165727.25984  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-172915.27412  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-173717.27823  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-175914.28863  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231115-182701.29692  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-094243.6732  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-094414.6858  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-094959.7139  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-095058.7261  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-095710.7617  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-100129.7803  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-100520.7990  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-104424.9675  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-104823.10117  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-105959.10696  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-112944.12281  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-114203.13183  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-115431.13924  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-120917.14726  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-152157.19707  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-152747.19991  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-152910.20135  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-155331.21306  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-161435.22253  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231116-161911.22409  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-095451.5611  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-095933.5917  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-100132.6079  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-100620.6476  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-100728.6614  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-101020.6882  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-102548.8455  cluster_taged_scan2scan_test_serial_processing.liam.liam.log.INFO.20231117-102856.8671  (+184 more)
IoManipulate/read_vector_from_txt/result_g2o/: Fend.g2o  conclusion.txt  edge_viewer.py  reference.txt  result_2d.g2o  rresult_2d_150.g2o  rresult_2d_400.g2o
IoManipulate/read_vector_from_txt/result_g2o/temp_result_erlier/: result_2d.g2o
IoManipulate/read_vector_from_txt/scans/: global_map.txt  global_map_non_centriod.txt  global_nl_map.txt  plot_global_map.py  plot_tree_r (copy).py  single_scan_10.txt  single_scan_100.txt  single_scan_101.txt  single_scan_103.txt  single_scan_104.txt  single_scan_105.txt  single_scan_106.txt  single_scan_107.txt  single_scan_108.txt  single_scan_109.txt  single_scan_110.txt  single_scan_111.txt  single_scan_112.txt  single_scan_113.txt  single_scan_115.txt  single_scan_116.txt  single_scan_117.txt  single_scan_118.txt  single_scan_119.txt  single_scan_12.txt  single_scan_120.txt  single_scan_121.txt  single_scan_123.txt  single_scan_124.txt  single_scan_125.txt  single_scan_126.txt  single_scan_127.txt  single_scan_128.txt  single_scan_129.txt  single_scan_13.txt  single_scan_131.txt  single_scan_132.txt  single_scan_133.txt  single_scan_134.txt  single_scan_135.txt  (+161 more)
my_project/: CMakeLists.txt  quick_build.sh  quick_test.sh
my_project/app/: CMakeLists.txt  main.cpp
my_project/app/include/: my_utils_dele.h
my_project/app/src/: derived.cpp  main.cpp  my_utils_dele.cpp
my_project/lib/: CMakeLists.txt
my_project/lib/include/: my_utils.h
my_project/lib/src/: my_utils.cpp
my_project/tests/: CMakeLists.txt  test_main.cpp
(+848 files in other folders)
